[Home]:[Index]:correct the home message jump link

--- a/src/app/admin/promote/_promote.scss
+++ b/src/app/admin/promote/_promote.scss
@@ -98,6 +98,10 @@
       width: 120px;
     }
 
+    &-width-5{
+      width: 160px;
+    }
+
     &-text{
       font-size: 12px;
     }
